<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/listOrGridViewIcon"
        android:icon="@drawable/list_view_ivon"
        android:title="@string/list_view_icon"
        android:orderInCategory="2"
        app:showAsAction="always" />

    <item
        android:id="@+id/searchIcon"
        android:icon="@drawable/search_icon"
        android:title="@string/search_icon"
        android:orderInCategory="1"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/deleteAllNoteIcon"
        android:title="@string/delete_all"
        android:orderInCategory="3"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/settingsMenuIcon"
        app:showAsAction="never"
        android:orderInCategory="5"
        android:title="@string/settings">

        <menu>
            <item
                android:id="@+id/fontChangeIcon"
                android:title="@string/change_font"
                android:icon="@drawable/font_icon"
                app:showAsAction="never" />

        </menu>
    </item>
    <item
        android:id="@+id/ProfileIcon"
        android:orderInCategory="6"
        android:title="@string/profile" />
    <item
        android:orderInCategory="7"
        android:title="Users Search" />
    <item
        android:id="@+id/LogoutIcon"
        android:orderInCategory="8"
        android:title="@string/logout" />


</menu>